--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png+xml" href="/src/assets/butterfly.png" />
     <link rel="stylesheet" href="/src/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A Simple Blog Website</title>
+    <title>Post Craft App</title>
   </head>
   <body>
     <div id="root"></div>
